fix: container alignment

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -4,6 +4,7 @@ ion-content{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     min-height: 100%;
   }
 }
